# parser_generator

./: .gitignore  CMakeLists.txt  json-grammar  linked_list.c  linked_list.h  main.c  main.cequal  memory_arena.c  memory_arena.h  parser.c  parser.h  re.c  test.json  tokenizer.c  tokenizer.h
generator/: generate.py  generate_header.py  generate_implementation.py  generate_parse_function.py  generate_parser_header.py  generate_parser_implementation.py  generate_parser_prototypes.py  generate_tokenizer_header.py  generate_tokenizer_implementation.py  grammar.py  grammar_types.py  name_generators.py  parsetemplate.c  parsetemplate.h  template.c  template.h  tokenizetemplate.c  tokenizetemplate.h
